{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 684,
  "lineage": "0b629fb1-4f92-e42c-cba8-e5e0c6763b46",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 32768,
            "id": "sgrule-4134266338",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0552cbb59442307b3",
            "self": false,
            "source_security_group_id": "sg-0764c7ff44ed6e1fb",
            "timeouts": null,
            "to_port": 61000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.alb.aws_security_group.alb",
            "module.ecs.module.ecs_instances.aws_security_group.instance",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:560092900663:loadbalancer/app/Danylo-Danylo/bbc712236c0d51ae",
            "arn_suffix": "app/Danylo-Danylo/bbc712236c0d51ae",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Danylo-Danylo-2118488018.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:560092900663:loadbalancer/app/Danylo-Danylo/bbc712236c0d51ae",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Danylo-Danylo",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0764c7ff44ed6e1fb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-076f47d90cc081d59"
              },
              {
                "subnet_id": "subnet-0e392d9ee15cfe2bb"
              }
            ],
            "subnets": [
              "subnet-076f47d90cc081d59",
              "subnet-0e392d9ee15cfe2bb"
            ],
            "tags": {
              "Environment": "Danylo"
            },
            "tags_all": {
              "Environment": "Danylo"
            },
            "vpc_id": "vpc-011cde17e9c3b05a1",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.ecs.module.alb.aws_security_group.alb",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:560092900663:listener/app/Danylo-Danylo/bbc712236c0d51ae/dc9f856633b57d32",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:560092900663:targetgroup/Danylo-Danylo-default/3de5a61a33fef911",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:560092900663:listener/app/Danylo-Danylo/bbc712236c0d51ae/dc9f856633b57d32",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:560092900663:loadbalancer/app/Danylo-Danylo/bbc712236c0d51ae",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.alb.aws_alb.alb",
            "module.ecs.module.alb.aws_alb_target_group.default",
            "module.ecs.module.alb.aws_security_group.alb",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:560092900663:targetgroup/Danylo-Danylo-default/3de5a61a33fef911",
            "arn_suffix": "targetgroup/Danylo-Danylo-default/3de5a61a33fef911",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:560092900663:targetgroup/Danylo-Danylo-default/3de5a61a33fef911",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Danylo-Danylo-default",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Danylo"
            },
            "tags_all": {
              "Environment": "Danylo"
            },
            "target_type": "instance",
            "vpc_id": "vpc-011cde17e9c3b05a1"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560092900663:security-group/sg-0764c7ff44ed6e1fb",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0764c7ff44ed6e1fb",
            "ingress": [],
            "name": "Danylo-Danylo_alb",
            "name_prefix": "",
            "owner_id": "560092900663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Danylo"
            },
            "tags_all": {
              "Environment": "Danylo"
            },
            "timeouts": null,
            "vpc_id": "vpc-011cde17e9c3b05a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https_from_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1018164883",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0764c7ff44ed6e1fb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.alb.aws_security_group.alb",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1291496340",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0764c7ff44ed6e1fb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.alb.aws_security_group.alb",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.ecs_instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560092900663:security-group/sg-0552cbb59442307b3",
            "description": "Used in Danylo",
            "egress": [],
            "id": "sg-0552cbb59442307b3",
            "ingress": [],
            "name": "Danylo_Danylo_default",
            "name_prefix": "",
            "owner_id": "560092900663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "Danylo",
              "Environment": "Danylo",
              "InstanceGroup": "default"
            },
            "tags_all": {
              "Cluster": "Danylo",
              "Environment": "Danylo",
              "InstanceGroup": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-011cde17e9c3b05a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.ecs_instances",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-777922983",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0552cbb59442307b3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.ecs_instances.aws_security_group.instance",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08b254e9f85f1bb061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02c365bb0ac656ef8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08b254e9f85f1bb06",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.nat.aws_eip.nat",
            "module.ecs.module.network.module.nat.aws_nat_gateway.nat",
            "module.ecs.module.network.module.private_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0384b1fa904f1c7271080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0be8f7b56f9ec9b8d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0384b1fa904f1c727",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.nat.aws_eip.nat",
            "module.ecs.module.network.module.nat.aws_nat_gateway.nat",
            "module.ecs.module.network.module.private_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0db3189b7246f22e3",
            "id": "r-rtb-089596ad886bddbce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-089596ad886bddbce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.public_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.vpc.aws_internet_gateway.vpc",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0db3189b7246f22e3",
            "id": "r-rtb-00638614fa029fb451080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00638614fa029fb45",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.public_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.vpc.aws_internet_gateway.vpc",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0919505314446803e",
            "domain": "vpc",
            "id": "eipalloc-0919505314446803e",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-49-134-69.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.49.134.69",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dffb45b0f6d9ce88",
            "domain": "vpc",
            "id": "eipalloc-0dffb45b0f6d9ce88",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-30-105-169.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.30.105.169",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0919505314446803e",
            "connectivity_type": "public",
            "id": "nat-02c365bb0ac656ef8",
            "network_interface_id": "eni-0def87e375c4c6fc3",
            "private_ip": "10.0.0.96",
            "public_ip": "52.49.134.69",
            "subnet_id": "subnet-076f47d90cc081d59"
          },
          "dependencies": [
            "module.ecs.module.network.module.nat.aws_eip.nat",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dffb45b0f6d9ce88",
            "connectivity_type": "public",
            "id": "nat-0be8f7b56f9ec9b8d",
            "network_interface_id": "eni-069ebebecedbabbd0",
            "private_ip": "10.0.1.181",
            "public_ip": "52.30.105.169",
            "subnet_id": "subnet-0e392d9ee15cfe2bb"
          },
          "dependencies": [
            "module.ecs.module.network.module.nat.aws_eip.nat",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.private_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560092900663:route-table/rtb-08b254e9f85f1bb06",
            "id": "rtb-08b254e9f85f1bb06",
            "owner_id": "560092900663",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Danylo",
              "Name": "Danylo_private_subnet_eu-west-1a"
            },
            "tags_all": {
              "Environment": "Danylo",
              "Name": "Danylo_private_subnet_eu-west-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-011cde17e9c3b05a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560092900663:route-table/rtb-0384b1fa904f1c727",
            "id": "rtb-0384b1fa904f1c727",
            "owner_id": "560092900663",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Danylo",
              "Name": "Danylo_private_subnet_eu-west-1b"
            },
            "tags_all": {
              "Environment": "Danylo",
              "Name": "Danylo_private_subnet_eu-west-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-011cde17e9c3b05a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.private_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002b14f3b79a02feb",
            "route_table_id": "rtb-08b254e9f85f1bb06",
            "subnet_id": "subnet-0f8c70752f28bcd37"
          },
          "dependencies": [
            "module.ecs.module.network.module.private_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.private_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aea6bfe2c9721d8a",
            "route_table_id": "rtb-0384b1fa904f1c727",
            "subnet_id": "subnet-0c69d3bd8c11f5150"
          },
          "dependencies": [
            "module.ecs.module.network.module.private_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.private_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.private_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560092900663:subnet/subnet-0f8c70752f28bcd37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8c70752f28bcd37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560092900663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Danylo",
              "Name": "Danylo_private_subnet_eu-west-1a"
            },
            "tags_all": {
              "Environment": "Danylo",
              "Name": "Danylo_private_subnet_eu-west-1a"
            },
            "vpc_id": "vpc-011cde17e9c3b05a1"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560092900663:subnet/subnet-0c69d3bd8c11f5150",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.51.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c69d3bd8c11f5150",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560092900663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Danylo",
              "Name": "Danylo_private_subnet_eu-west-1b"
            },
            "tags_all": {
              "Environment": "Danylo",
              "Name": "Danylo_private_subnet_eu-west-1b"
            },
            "vpc_id": "vpc-011cde17e9c3b05a1"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560092900663:route-table/rtb-089596ad886bddbce",
            "id": "rtb-089596ad886bddbce",
            "owner_id": "560092900663",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Danylo",
              "Name": "Danylo_public_subnet_eu-west-1a"
            },
            "tags_all": {
              "Environment": "Danylo",
              "Name": "Danylo_public_subnet_eu-west-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-011cde17e9c3b05a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560092900663:route-table/rtb-00638614fa029fb45",
            "id": "rtb-00638614fa029fb45",
            "owner_id": "560092900663",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Danylo",
              "Name": "Danylo_public_subnet_eu-west-1b"
            },
            "tags_all": {
              "Environment": "Danylo",
              "Name": "Danylo_public_subnet_eu-west-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-011cde17e9c3b05a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b977c0484a8d1a1",
            "route_table_id": "rtb-089596ad886bddbce",
            "subnet_id": "subnet-076f47d90cc081d59"
          },
          "dependencies": [
            "module.ecs.module.network.module.public_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4c0b8f073f63c56",
            "route_table_id": "rtb-00638614fa029fb45",
            "subnet_id": "subnet-0e392d9ee15cfe2bb"
          },
          "dependencies": [
            "module.ecs.module.network.module.public_subnet.aws_route_table.subnet",
            "module.ecs.module.network.module.public_subnet.aws_subnet.subnet",
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560092900663:subnet/subnet-076f47d90cc081d59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076f47d90cc081d59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560092900663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Danylo",
              "Name": "Danylo_public_subnet_eu-west-1a"
            },
            "tags_all": {
              "Environment": "Danylo",
              "Name": "Danylo_public_subnet_eu-west-1a"
            },
            "vpc_id": "vpc-011cde17e9c3b05a1"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560092900663:subnet/subnet-0e392d9ee15cfe2bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e392d9ee15cfe2bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560092900663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Danylo",
              "Name": "Danylo_public_subnet_eu-west-1b"
            },
            "tags_all": {
              "Environment": "Danylo",
              "Name": "Danylo_public_subnet_eu-west-1b"
            },
            "vpc_id": "vpc-011cde17e9c3b05a1"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560092900663:internet-gateway/igw-0db3189b7246f22e3",
            "id": "igw-0db3189b7246f22e3",
            "owner_id": "560092900663",
            "tags": {
              "Environment": "Danylo"
            },
            "tags_all": {
              "Environment": "Danylo"
            },
            "vpc_id": "vpc-011cde17e9c3b05a1"
          },
          "dependencies": [
            "module.ecs.module.network.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560092900663:vpc/vpc-011cde17e9c3b05a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03b682816e8527e81",
            "default_route_table_id": "rtb-02e71dc75963a3a07",
            "default_security_group_id": "sg-0bb8370f1da02d269",
            "dhcp_options_id": "dopt-028befac7c70e2fda",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-011cde17e9c3b05a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e71dc75963a3a07",
            "owner_id": "560092900663",
            "tags": {
              "Environment": "Danylo",
              "Name": "Danylo"
            },
            "tags_all": {
              "Environment": "Danylo",
              "Name": "Danylo"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}